@@ -1,7 +1,10 @@
+TAG: qcreports_db-6-0-22-10
 TAG: qcreports_db-6-0-22-9
 DATE: 11/10/2022
 STAFF: lec
 wts2-888/SQA: PWI/Custom Reports/new pwi folder
+wts2-1031/Divide data in nomen QC reports
+modified:   mgd/HMD_SymbolDiffs.py
 
 TAG: qcreports_db-6-0-22-8
 DATE: 11/08/2022
